syntax = "proto3";

package serialization;

message ReadOnlyData {
  repeated string strings = 1;
}
